# esp32_temp_gefrickel

./: Cargo.toml
.cargo/: config.toml
src/: efmt.rs  main.rs
