[package]
name = "esp32_ds18b20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds18b20 = "0.1.1"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "esp-println", "print-uart", "exception-handler", "panic-handler"] }
esp-println = { version = "0.7.1", features = ["esp32c3"] }
esp32c3-hal = "0.13.0"
one-wire-bus = "0.1.1"
ssd1351 = { git = "https://github.com/MabezDev/ssd1351"}
